--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "homepage": "https://zzzandrezzz.github.io/ReactJs-Redux-ToDoList/"
 }
