--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo_list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zzzandrezzz.github.io/ReactJs-Redux-ToDoList/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -44,6 +45,5 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  },
-  "homepage": "https://zzzandrezzz.github.io/ReactJs-Redux-ToDoList/"
+  }
 }
